Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis fugit vel voluptatum exercitationem amet quam incidunt aspernatur, cupiditate accusamus repellat atque eius eos, temporibus tempore doloribus voluptatibus ratione. Ab, eius!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam aut laudantium nam, eos illo ipsam et porro aperiam nemo a deserunt fugiat! Ut fuga illum unde, consequatur necessitatibus ullam molestiae?</p>
 </body>
 </html>
